# py-mfdca

./: .gitignore  Readme.md  pyproject.toml  requirements.txt  setup.py  unit_testing.py
dca/: dca_analysis.py  dca_class.py  dca_functions.py  helper_functions.py  hmm_tools.py  requirements.txt  setup.py
dca.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
unit_testing/: readme.md
unit_testing/main_function/: dummy_couplings.npy  dummy_di.npy  dummy_msa.fasta  pdz.DI  pdz_domain50_hamiltonian.txt  pdz_hamiltonians.txt  pdz_nodupes.fa  pi_pdz.mat  w_pdz.mat
