[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dca"
version = "1.1.0"
description = "A Python implementation of mean-field Direct Coupling Analysis, adapted from the dca.m script from http://dca.rice.edu/portal/dca/."
authors = [
    { name = "Jonathan Martin", email = "jonathan.martin3@utdallas.edu" }
]
license = "MIT"
readme = "README.md"
keywords = ["DCA", "Machine Learning", "Potts", "Proteins"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "matplotlib",
    "numba",
    "numpy",
    "biopython",
    "scipy",
]

[tool.setuptools.package-data]
dca = ['dca/__init__.py',
        'dca/dca_analysis.py',
        'dca/dca_class.py',
        'dca/dca_functions.py',
        'dca/helper_functions.py',]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["dca"]  # package names should match these glob patterns (["*"] by default)
exclude = ["dca/__pycache_*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.urls]
Homepage = "https://github.com/utdal/py-mfdca/"
